--- a/src/app/modules/career-succession/testpool/testpool.component.html
+++ b/src/app/modules/career-succession/testpool/testpool.component.html
@@ -291,7 +291,7 @@
           </div>
 
           <div class="col-md-4">
-            <button nbButton style="color: #4847E0;">Cancel</button>
+            <button nbButton style="color: #4847E0;" (click)="cancel()">Cancel</button>
           </div>
         </div>
       </form>
