Vendors and plans implementation

--- a/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
+++ b/src/app/modules/benefit/vendor-plan/vendor-plan.component.html
@@ -1,6 +1,6 @@
 <!-- <ngx-componentsheader [pageName]='Benefits' [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 </ngx-componentsheader> -->
-<ngx-componentsheader pageName="Benefits" [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
+<ngx-componentsheader pageName="Vendors" [requiredButton]="topActionButtons" (buttonClick)='modal($event)'>
 </ngx-componentsheader>
 
 
@@ -11,21 +11,21 @@
     <nb-card-body>
 
 
-        <div class="row">
+        <div class="row" *ngFor="let vend of AllVendors">
 
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
                 <span style="font-size: large; font-weight: bold;">Vendor</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;"></span>
+                <span style="font-size: large; font-weight: bold;">{{vend.name}}</span>
             </div>
 
             <div class="col-sm-4" style="margin-top: 0.5rem; margin-bottom: 0.5rem;">
                 <span style="font-size: large; font-weight: bold;">Description</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;"></span>
+                <span style="font-size: large; font-weight: bold;">{{vend.description}}</span>
             </div>
 
 
@@ -34,7 +34,7 @@
                 <span style="font-size: large; font-weight: bold;">Address</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;"></span>
+                <span style="font-size: large; font-weight: bold;">{{vend.address}}</span>
             </div>
 
 
@@ -42,45 +42,53 @@
                 <span style="font-size: large; font-weight: bold;">phoneNumber</span>
             </div>
             <div class="col-sm-8">
-                <span style="font-size: large; font-weight: bold;"></span>
+                <span style="font-size: large; font-weight: bold;">{{vend.phoneNumber}}</span>
             </div>
-
+            <div class="col-sm-6"style="margin-top: 1rem; margin-bottom: 1rem;" >
+                <a href="javascript:void(0)" (click)="onClick()"  [routerLink]="['/benefits/create-benefit',vend.id]">view details</a>
+            </div>
+            <div class="col-sm-6" style="margin-top: 1rem; margin-bottom: 1rem;">
+                <!-- <span style="padding: 0.5rem;"><i class="fas fa-trash-alt" style="color: rgb(255, 0, 0);" (click)="deleteVendor()">Remove Vendor</i></span> -->
+                <button nbButton outline status="danger"  class="d-flex column"
+                style="background-color: white;"  (click)="deleteVendor()">Remove Vendor</button>
+            </div>
         </div>
 
 
-        <div style="align-items: center;
+        <!-- <div style="align-items: center;
          justify-content: center;
-         display: flex; margin: 6.4rem 1rem 1rem 1rem;" >
+         display: flex; margin: 6.4rem 1rem 1rem 1rem;">
             <span style="font-weight: 100; font-size: medium; font-style: normal;">PLANS</span>
         </div>
 
         <div class="row">
-           <div class="col-sm-3">
-               <span>Plan Name</span>
-               <span></span>
-           </div> 
-           <div class="col-sm-3">
-               <span>Description</span>
-               <!-- <div>fhhfkfkfkfk</div> -->
-           </div> 
+            <div class="col-sm-3">
+                <span>Plan Name</span>
+                <span></span>
+            </div>
+            <div class="col-sm-3">
+                <span>Description</span>
+                 <div>fhhfkfkfkfk</div>
+            </div>
 
-           <div class="col-sm-3">
-               <span>Policy Number</span>
-               
-           </div> 
+            <div class="col-sm-3">
+                <span>Policy Number</span>
 
-           <div class="col-sm-3">
-               <span><a href="">view details</a></span>
-           </div> 
-           
-         
-        </div>
+            </div>
+
+            <div class="col-sm-3">
+                <span><a href="">view details</a></span>
+            </div>
 
 
-        <div  style="align-items: center; justify-content: center; display: flex; margin: 2rem 1rem;" >
-            <button nbButton status="primary" outline class="d-flex column" style="background-color: white;"(click)="AddPlan()">Add Plans</button>
-        </div>
-        
+        </div> -->
+
+<!-- 
+        <div style="align-items: center; justify-content: center; display: flex; margin: 2rem 1rem;">
+            <button nbButton status="primary" outline class="d-flex column" style="background-color: white;"
+                (click)="AddPlan()">Add Plans</button>
+        </div> -->
+
     </nb-card-body>
 </nb-card>
 
@@ -98,32 +106,32 @@
             <div style="margin: 20px;">
                 <div class="form-group">
                     <label for="title">Name of Vendor</label>
-                    <input type="text" class="form-control" placeholder="Enter title" id="name" #name="ngModel" name="name"
-                    [(ngModel)]=" AddVendor.name" required>
+                    <input type="text" class="form-control" placeholder="Enter title" id="name" #name="ngModel"
+                        name="name" [(ngModel)]=" AddVendor.name" required>
 
                     <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
                         <div *ngIf="name.errors.required">name is required</div>
-                    </div> 
+                    </div>
 
                 </div>
                 <div class="form-group">
                     <label for="title">Phone number</label>
-                    <input type="number" class="form-control" placeholder="Enter phoneNumber" id="phoneNumber" #phoneNumber="ngModel"
-                    name="phoneNumber" [(ngModel)]="AddVendor.phoneNumber" required>
+                    <input type="number" class="form-control" placeholder="Enter phoneNumber" id="phoneNumber"
+                        #phoneNumber="ngModel" name="phoneNumber" [(ngModel)]="AddVendor.phoneNumber" required>
 
                     <div *ngIf="phoneNumber.invalid && (phoneNumber.dirty || phoneNumber.touched)" class="error">
                         <div *ngIf="phoneNumber.errors.required">phoneNumber is required</div>
-                    </div> 
+                    </div>
 
                 </div>
                 <div class="form-group">
                     <label for="title">Email</label>
                     <input type="email" class="form-control" placeholder="Enter Email" id="phoneNumber" #email="ngModel"
-                    name="email" [(ngModel)]="AddVendor.email" required>
+                        name="email" [(ngModel)]="AddVendor.email" required>
 
                     <div *ngIf="email.invalid && (email.dirty || email.touched)" class="error">
                         <div *ngIf="email.errors.required">email is required</div>
-                    </div> 
+                    </div>
 
                 </div>
 
@@ -133,24 +141,24 @@
                     <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Benefit
                         Type</label>
                     <div class="col-sm-8">
-                        <select placeholder="Select Gender" class="form-control" name="benefitTypeID" id="benefitTypeID" #benefitTypeID="ngModel" [(ngModel)]="AddVendor.benefitTypeID">
+                        <select placeholder="Select Gender" class="form-control" name="benefitTypeID" id="benefitTypeID"
+                            #benefitTypeID="ngModel" [(ngModel)]="AddVendor.benefitTypeID">
                             <option value="">--Select Event---</option>
-                             <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option> -->
+                            <option *ngFor="let benefit of Benefit" [value]="benefit.id">{{benefit.text}}</option> -->
                         </select>
 
-                         <div *ngIf="benefitTypeID.invalid && (benefitTypeID.dirty || benefitTypeID.touched)"
+                        <div *ngIf="benefitTypeID.invalid && (benefitTypeID.dirty || benefitTypeID.touched)"
                             class="error">
                             <div *ngIf="benefitTypeID.errors.required">benefitTypeID is required</div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="Description">Description</label>
-                    <textarea type="textarea" class="form-control" placeholder="Enter Description"
-                        id="description" name="description" #description="ngModel"  [(ngModel)]="AddVendor.description" ></textarea>
-                    
-                    <div *ngIf="description.invalid && (description.dirty || description.touched)"
-                        class="error">
+                    <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
+                        name="description" #description="ngModel" [(ngModel)]="AddVendor.description"></textarea>
+
+                    <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
                         <div *ngIf="description.errors.required">Description is required</div>
                     </div>
 
@@ -158,13 +166,12 @@
 
                 <div class="form-group">
                     <label for="Description">Adress</label>
-                    <textarea type="textarea" class="form-control" placeholder="Enter Address"
-                        id="address" name="address" #address="ngModel"  [(ngModel)]="AddVendor.address" ></textarea>
-                    
-                    <div *ngIf="address.invalid && (address.dirty|| address.touched)"
-                        class="error">
+                    <textarea type="textarea" class="form-control" placeholder="Enter Address" id="address"
+                        name="address" #address="ngModel" [(ngModel)]="AddVendor.address"></textarea>
+
+                    <div *ngIf="address.invalid && (address.dirty|| address.touched)" class="error">
                         <div *ngIf="address.errors.required">Address is required</div>
-                    </div> 
+                    </div>
 
                 </div>
                 <div>
@@ -203,50 +210,49 @@
             <div style="margin: 20px;">
                 <div class="form-group">
                     <label for="title">Name of Plan</label>
-                    <input type="text" class="form-control" placeholder="Enter name of plan" id="name" #name="ngModel" name="name"
-                    [(ngModel)]=" AddVendorPlan.name" required>
+                    <input type="text" class="form-control" placeholder="Enter name of plan" id="name" #name="ngModel"
+                        name="name" [(ngModel)]=" AddVendorPlan.name" required>
 
                     <div *ngIf="name.invalid && (name.dirty || name.touched)" class="error">
                         <div *ngIf="name.errors.required">name is required</div>
-                    </div> 
+                    </div>
 
                 </div>
                 <div class="form-group">
                     <label for="title">Policy number</label>
-                    <input type="text" class="form-control" placeholder="Enter refNumber" id="refNumber" #refNumber="ngModel" name="refNumber"
-                    [(ngModel)]=" AddVendorPlan.refNumber" required>
+                    <input type="text" class="form-control" placeholder="Enter refNumber" id="refNumber"
+                        #refNumber="ngModel" name="refNumber" [(ngModel)]=" AddVendorPlan.refNumber" required>
 
                     <div *ngIf="refNumber.invalid && (refNumber.dirty || refNumber.touched)" class="error">
                         <div *ngIf="refNumber.errors.required">refNumber is required</div>
                     </div>
 
                 </div>
-               
+
 
 
                 <div class="form-group row">
                     <label for="inputEmail1" class="label col-sm-4 col-form-label listsubheader">Vendor id
-                        </label>
+                    </label>
                     <div class="col-sm-8">
-                        <select placeholder="Select Gender" class="form-control" name="vendorId" id="vendorId" #vendorId="ngModel" [(ngModel)]="AddVendorPlan.vendorId"> 
+                        <select placeholder="Select Gender" class="form-control" name="vendorId" id="vendorId"
+                            #vendorId="ngModel" [(ngModel)]="AddVendorPlan.vendorId">
                             <option value="">--Select Vendor---</option>
                             <option *ngFor="let evo of Vendora" [value]="evo.benefitTypeID">{{evo.name}}</option> -->
                         </select>
 
-                        <div *ngIf="vendorId.invalid && (vendorId.dirty || vendorId.touched)"
-                            class="error">
+                        <div *ngIf="vendorId.invalid && (vendorId.dirty || vendorId.touched)" class="error">
                             <div *ngIf="vendorId.errors.required">Vendor is required</div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
-                
+
                 <div class="form-group">
                     <label for="Description">Plan Description</label>
-                    <textarea type="textarea" class="form-control" placeholder="Enter Description"
-                        id="description" name="description" #description="ngModel"  [(ngModel)]="AddVendorPlan.description" ></textarea>
-                    
-                    <div *ngIf="description.invalid && (description.dirty || description.touched)"
-                        class="error">
+                    <textarea type="textarea" class="form-control" placeholder="Enter Description" id="description"
+                        name="description" #description="ngModel" [(ngModel)]="AddVendorPlan.description"></textarea>
+
+                    <div *ngIf="description.invalid && (description.dirty || description.touched)" class="error">
                         <div *ngIf="description.errors.required">Description is required</div>
                     </div>
 
